--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.49.4",
     "companyflashapp": "file:",
     "next": "15.3.1",
     "react": "^19.0.0",
