--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "companyflashapp",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -9,18 +10,42 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@google-cloud/documentai": "^9.1.0",
+    "@headlessui/react": "^2.2.3",
+    "@heroicons/react": "^2.2.0",
+    "@radix-ui/react-slot": "^1.2.2",
+    "@radix-ui/react-tabs": "^1.1.11",
+    "@react-pdf-viewer/core": "^3.12.0",
+    "@react-pdf-viewer/default-layout": "^3.12.0",
     "@supabase/supabase-js": "^2.49.4",
+    "clsx": "^2.1.1",
     "companyflashapp": "file:",
+    "dotenv": "^16.5.0",
+    "file-type": "^20.5.0",
+    "formidable": "^3.5.4",
+    "google-auth-library": "^10.0.0-rc.2",
+    "lucide-react": "^0.509.0",
     "next": "15.3.1",
+    "next-auth": "^4.24.11",
+    "node-fetch": "^2.7.0",
+    "pdf-parse": "^1.1.1",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-pdf": "^9.2.1",
+    "recharts": "^2.15.3",
+    "sharp": "^0.34.1",
+    "swr": "^2.3.3",
+    "tesseract.js": "^6.0.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/formidable": "^3.4.5",
+    "@types/next-auth": "^3.13.0",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/react-pdf": "^6.2.0",
     "eslint": "^9",
     "eslint-config-next": "15.3.1",
     "tailwindcss": "^4",
