--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "recharts": "^2.15.3",
     "sharp": "^0.34.1",
     "swr": "^2.3.3",
-    "tesseract.js": "^6.0.1"
+    "tesseract.js": "^6.0.1",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
